@@ -1,98 +1,78 @@
 package knu.kproject.service;
 
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.transaction.Transactional;
-import knu.kproject.dto.UserDto.ToolInfoDto;
-import knu.kproject.dto.UserDto.UserDto;
+import knu.kproject.dto.notice.NoticeDto;
 import knu.kproject.dto.project.*;
 import knu.kproject.entity.project.Project;
 import knu.kproject.entity.project.ProjectUser;
 import knu.kproject.entity.user.User;
 import knu.kproject.entity.workspace.Workspace;
+import knu.kproject.exception.ProjectException;
+import knu.kproject.exception.UserExceptionHandler;
+import knu.kproject.exception.code.ProjectErrorCode;
+import knu.kproject.exception.code.UserErrorCode;
+import knu.kproject.global.CHOICE;
 import knu.kproject.global.ROLE;
+import knu.kproject.global.functions.Access;
 import knu.kproject.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.sql.Timestamp;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ProjectService {
     private final UserRepository userRepository;
     private final WorkspaceRepository workspaceRepository;
-    private final ProjectRepositroy projectRepositroy;
+    private final ProjectRepository projectRepository;
     private final ProjectUserRepository projectUserRepository;
-    private final BoardService boardService;
-    private final BoardRepository boardRepository;
+    private final NoticeService noticeService;
 
-    public UserTeamDto fromEntity(User user, Project project) {
-        ProjectUser projectUser = projectUserRepository.findByUserAndProject(user, project);
-
-        UserTeamDto dto = new UserTeamDto();
-        dto.setId(user.getId());
-        dto.setName(user.getName());
-        dto.setEmail(user.getEmail());
-        dto.setLocation(user.getLocation());
-        dto.setMbti(user.getMbti());
-        dto.setImageUrl(user.getImageUrl());
-        dto.setRole(user.getRole());
-        dto.setColor(projectUser.getColor());
-        dto.setTools(user.getUserTools().stream()
-                .map(ToolInfoDto::fromEntity)
-                .collect(Collectors.toList()));
-        dto.setStackNames(user.getUserStacks().stream()
-                .map(userStack -> userStack.getStack().getName())
-                .collect(Collectors.toList()));
-
-        return dto;
+    // 특정 프로젝트 내에 존재하는 유저 탐색해서 project내 유저로 변환
+    private ProjectDto convertToDto(Project project) {
+        List<User> users = project.getProjectUsers().stream()
+                .filter(projectUser -> {
+                    if (projectUser.getChoice() != null && projectUser.getChoice().equals(CHOICE.수락)) return true;
+                    return false;
+                })
+                .map(ProjectUser::getUser)
+                .toList();
+        List<UserTeamDto> userDto = new ArrayList<>();
+        for (User user : users) {
+            ProjectUser projectUser = projectUserRepository.findByUserAndProject(user, project);
+            UserTeamDto dto = UserTeamDto.fromEntity(projectUser);
+            dto.setRole(projectUser.getRole());
+            userDto.add(dto);
+        }
+        return ProjectDto.fromEntity(project, userDto);
     }
 
     public UUID createProject(PutProjectDto projectDto, Long userId) {
         List<Workspace> workspaces = workspaceRepository.findByOwnerId(userId);
 
-        if (userId == null) throw new IllegalArgumentException("illegal error");
-        if (workspaces.isEmpty()) throw new EntityNotFoundException("workspace not found");
+        if (userId == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User user = userRepository.findById(userId).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = new Project(projectDto, workspaces.get(0));
 
-        Project project = Project.builder()
-                .title(projectDto.getTitle())
-                .overview(projectDto.getOverview())
-                .startDate(projectDto.getStartDate())
-                .endDate(projectDto.getEndDate())
-                .workspace(workspaces.get(0))
-                .createdAt(new Timestamp(System.currentTimeMillis()))
-                .color(projectDto.getColor())
-                .build();
-
-        projectRepositroy.save(project);
-
-        ProjectUser projectUser = ProjectUser.builder()
-                .user(userRepository.findById(userId).orElseThrow())
-                .project(project)
-                .role(ROLE.OWNER)
-                .color(project.getColor())
-                .build();
+        projectRepository.save(project);
+        ProjectUser projectUser = new ProjectUser(user, project, ROLE.MASTER, CHOICE.수락);
         List<ProjectUser> projectUserList = new ArrayList<>();
         projectUserList.add(projectUser);
-
         projectUserRepository.save(projectUser);
-
         project.setProjectUsers(projectUserList);
-        projectRepositroy.save(project);
-
+        projectRepository.save(project);
         return project.getId();
     }
 
     public List<ProjectDto> getProjectByWorkspaceId(Long workspaceId) {
-        if (workspaceId == null) throw new IllegalArgumentException("error");
+        if (workspaceId == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        workspaceRepository.findById(workspaceId).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
 
-        workspaceRepository.findById(workspaceId).orElseThrow(() -> new EntityNotFoundException("workspace not found"));
-        List<Project> projects = projectRepositroy.findByWorkspaceOwnerId(workspaceId);
+        List<Project> projects = projectRepository.findByWorkspaceOwnerId(workspaceId);
         List<ProjectUser> subProjects = projectUserRepository.findByUserId(workspaceId);
         for (ProjectUser projectUser : subProjects) {
-            if (!projects.contains(projectUser.getProject())) {
+            if (!projects.contains(projectUser.getProject()) && projectUser.getChoice().equals(CHOICE.수락)) {
                 projects.add(projectUser.getProject());
             }
         }
@@ -101,37 +81,21 @@ public class ProjectService {
     }
 
     public ProjectDto getProjectById(Long userToken, UUID projectId) {
-        User user = userRepository.findById(userToken).orElseThrow();
-        Project project = projectRepositroy.findById(projectId).orElseThrow();
-        if (!projectUserRepository.existsByProjectAndUser(project, user)) throw new NullPointerException();
-
+        if (userToken == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User user = userRepository.findById(userToken).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId).orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
+        ProjectUser projectUser = projectUserRepository.findByUserAndProject(user, project);
         return convertToDto(project);
-    }
-
-    // 특정 프로젝트 내에 존재하는 유저 탐색해서 project내 유저로 변환
-    private ProjectDto convertToDto(Project project) {
-        List<User> users = project.getProjectUsers().stream()
-                .map(ProjectUser::getUser)
-                .toList();
-        List<UserTeamDto> userDto = new ArrayList<>();
-        for (User user : users) {
-            ROLE role = projectUserRepository.findByUserAndProject(user, project).getRole();
-            UserTeamDto dto = fromEntity(user, project);
-            dto.setRole(role);
-            userDto.add(dto);
-        }
-        return ProjectDto.fromEntity(project, userDto);
     }
 
     @Transactional
     public void updateProject(Long userId, UUID projectId, PutProjectDto updatedProjectData) {
-        Project project = projectRepositroy.findById(projectId)
-                .orElseThrow(() -> new EntityNotFoundException("project not found"));
-        ROLE role = projectUserRepository.findByUserAndProject(userRepository.findById(userId).orElseThrow(), project).getRole();
-
-        if (role.equals(ROLE.GUEST)) {
-            throw new NullPointerException();
-        }
+        if (userId == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User u = userRepository.findById(userId).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId)
+                .orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
+        ProjectUser projectUser = projectUserRepository.findByUserAndProject(u, project);
+        Access.accessPossible(projectUser, ROLE.WRITER);
         List<ProjectUser> projectUserList = projectUserRepository.findByProjectId(projectId);
         // 유저와 프로젝트 색이 일치할 경우, 프로젝트 색을 따름, 다를경우 개인 색 유지
         for (ProjectUser user : projectUserList) {
@@ -142,120 +106,91 @@ public class ProjectService {
                 user.setColor(updatedProjectData.getColor());
             }
         }
-
-        project.setTitle(updatedProjectData.getTitle() == null ? project.getTitle() : updatedProjectData.getTitle());
-        project.setOverview(updatedProjectData.getOverview() == null ? project.getOverview() : updatedProjectData.getOverview());
-        project.setStartDate(updatedProjectData.getStartDate() == null ? project.getStartDate() : updatedProjectData.getStartDate());
-        project.setEndDate(updatedProjectData.getEndDate() == null ? project.getEndDate() : updatedProjectData.getEndDate());
-        project.setColor(updatedProjectData.getColor() == null ? project.getColor() : updatedProjectData.getColor());
-
-        projectRepositroy.save(project);
+        project.update(updatedProjectData);
+        projectRepository.save(project);
     }
 
     public void deleteProject(Long token, UUID projectId) {
-        User user = userRepository.findById(token).orElseThrow();
-        Project project = projectRepositroy.findById(projectId)
-                .orElseThrow(() -> new EntityNotFoundException("project not found"));
-
-        ROLE role = projectUserRepository.findByUserAndProject(user, project).getRole();
-
-        if (!role.equals(ROLE.OWNER)) {
-            throw new NullPointerException();
-        }
-
-        projectRepositroy.delete(project);
+        if (token == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User user = userRepository.findById(token).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId)
+                .orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
+        ProjectUser projectUser = projectUserRepository.findByUserAndProject(user, project);
+        Access.accessPossible(projectUser, ROLE.OWNER);
+        projectRepository.delete(project);
     }
 
-    public List<UserDto> findByAllProjectUsers(Long token, UUID projectId) {
-        User user1 = userRepository.findById(token).orElseThrow();
-        Project project = projectRepositroy.findById(projectId).orElseThrow();
+    public List<UserTeamDto> findByAllProjectUsers(Long token, UUID projectId) {
+        if (token == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User user1 = userRepository.findById(token).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId).orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
+        ProjectUser projectUser = projectUserRepository.findByUserAndProject(user1, project);
+        Access.accessPossible(projectUser, ROLE.GUEST);
 
-        if (!projectUserRepository.existsByProjectAndUser(project, user1)) {
-            throw new NullPointerException();
-        }
-
-        List<User> users = project.getProjectUsers().stream()
-                .map(ProjectUser::getUser)
+        List<UserTeamDto> users = project.getProjectUsers().stream()
+                .map(projectUser1 -> UserTeamDto.fromEntity(projectUser1))
                 .toList();
-        List<UserDto> userDto = new ArrayList<>();
-        for (User user : users) {
-            ROLE role = projectUserRepository.findByUserAndProject(user, project).getRole();
-            UserDto dto = UserDto.fromEntity(user);
-            dto.setRole(role);
-            userDto.add(dto);
-        }
-        return userDto;
+        return users;
     }
 
-    public void addUser(Long token, InviteDto inviteDto) {
-        User user1 = userRepository.findById(token).orElseThrow();
-        Project project = projectRepositroy.findById(inviteDto.getProjectId()).orElseThrow(() -> new EntityNotFoundException("not found project"));
+    public void addUser(Long token, UUID projectId, InviteDto inviteDto) {
+        if (token == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User user1 = userRepository.findById(token).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId).orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
+        ProjectUser projectUser1 = projectUserRepository.findByUserAndProject(user1, project);
+        Access.accessPossible(projectUser1, ROLE.GUEST);
 
-        ROLE role = projectUserRepository.findByUserAndProject(user1, project).getRole();
-
-        if (role.equals(ROLE.GUEST)) {
-            throw new NullPointerException();
-        }
-
-        List<String> userEmails = inviteDto.getUserEmails();
-        for (String email : userEmails) {
-            if (userRepository.existsByEmail(email)) {
-                User user = userRepository.findByEmail(email);
-                if (!projectUserRepository.existsByProjectAndUser(project, user)) {
-                    ProjectUser projectUser = new ProjectUser();
-                    projectUser.setProject(project);
-                    projectUser.setUser(user);
-                    projectUser.setRole(ROLE.GUEST);
-                    projectUser.setColor(project.getColor());
-
-                    projectUserRepository.save(projectUser);
-                }
+        if (userRepository.existsByEmail(inviteDto.getEmail())) {
+            User user = userRepository.findByEmail(inviteDto.getEmail());
+            if (!projectUserRepository.existsByProjectAndUser(project, user)) {
+                ProjectUser projectUser = new ProjectUser(user, project, ROLE.WRITER, CHOICE.전송);
+                noticeService.addNotice(user, new NoticeDto(user1, user, project));
+                projectUserRepository.save(projectUser);
             }
+        } else {
+            throw new ProjectException(ProjectErrorCode.NOT_FOUND_USER);
         }
     }
 
     @Transactional
-    public void changeRole(Long userId, RoleDto roleDto) {
-        User user = userRepository.findById(userId).orElseThrow();
-        Project project = projectRepositroy.findById(roleDto.getProjectId()).orElseThrow();
-
+    public void changeRole(Long userId, UUID projectId, RoleDto roleDto) {
+        if (userId == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User user = userRepository.findById(userId).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId).orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
         ProjectUser self = projectUserRepository.findByUserAndProject(user, project);
+        Access.accessPossible(self, ROLE.GUEST);
 
-        if (self.getRole().equals(ROLE.GUEST)) {
-            throw new NullPointerException();
-        }
-
-        Map<String, ROLE> roles = roleDto.getRoles();
-        for (Map.Entry<String, ROLE> entry : roles.entrySet()) {
-            Long id = Long.parseLong(entry.getKey());
+        Map<Long, ROLE> roles = roleDto.getRoles();
+        for (Map.Entry<Long, ROLE> entry : roles.entrySet()) {
+            Long id = entry.getKey();
             ROLE role = entry.getValue();
 
-            ProjectUser projectUser = projectUserRepository.findByUserAndProject(userRepository.findById(id).orElseThrow(), project);
-            if (role.equals(ROLE.OWNER) && self.getRole().equals(ROLE.WRITER)) {
-                throw new NullPointerException();
-            }
+            ProjectUser projectUser = projectUserRepository.findByUserAndProject(userRepository.findById(id).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER)), project);
+            Access.accessPossible(self, role);
             projectUser.setRole(role);
 
             projectUserRepository.save(projectUser);
         }
     }
 
-    public void deleteProjectUser(Long userId, UUID projectId, List<String> userEmails) {
-        User self = userRepository.findById(userId).orElseThrow();
-        Project project = projectRepositroy.findById(projectId).orElseThrow(() -> new EntityNotFoundException("project not found"));
-        ROLE role = projectUserRepository.findByUserAndProject(self, project).getRole();
+    @Transactional
+    public void deleteProjectUser(Long userId, UUID projectId, InviteDto deleteDto) {
+        if (userId == null) throw new ProjectException(ProjectErrorCode.BAD_AUTHORIZATION);
+        User self = userRepository.findById(userId).orElseThrow(() -> new UserExceptionHandler(UserErrorCode.NOT_FOUND_USER));
+        Project project = projectRepository.findById(projectId).orElseThrow(() -> new ProjectException(ProjectErrorCode.NOT_FOUND_PROJECT));
+        ProjectUser projectUser1 = projectUserRepository.findByUserAndProject(self, project);
+        Access.accessPossible(projectUser1, ROLE.OWNER);
 
-        if (!role.equals(ROLE.OWNER)) {
-            throw new NullPointerException();
-        }
 
-        List<ProjectUser> projectUsers = project.getProjectUsers();
-        for (ProjectUser projectUser : projectUsers) {
-            for (String email : userEmails) {
-                User user = userRepository.findByEmail(email);
-                if (user.getId() == projectUser.getUser().getId()) {
-                    projectUserRepository.delete(projectUser);
-                }
+        List<ProjectUser> projectUserList = project.getProjectUsers();
+        User user = userRepository.findByEmail(deleteDto.getEmail());
+        Iterator<ProjectUser> iterator = projectUserList.iterator();
+
+        while (iterator.hasNext()) {
+            ProjectUser projectUser = iterator.next();
+            if (projectUser.getUser().equals(user)) {
+                iterator.remove();
+                projectUserRepository.delete(projectUser);
             }
         }
     }
